# cluster-ci

./: .cluster-ci  .gitattributes  .gitignore  AGENTS.md  README.md  cluster-run.bat  cluster-run.ps1  cluster_constraints.txt  dvc.yaml  final_fixes_v2.py  install.sh  pyproject.toml  remote_headnode_service.py  remote_scheduler_loop.py  simulate_research.py  update_cluster.sh  worker_id.txt
.agent/rules/: communication.md  documentation.md
.agent/workflows/: architect.md  handover.md  pull.md  research.md  rule.md
.cluster-ci-tools/: validate_pyproject.py
.cursor/commands/: architect.md  handover.md
.cursor/rules/: communication.mdc  documentation.mdc
.github/workflows/: cluster-ci.yml  deploy-infra.yml  test-stream.yml  test_runner.yml  update_constraints.yml
docs/: concurrency_management.md  index_architecture.md  index_dashboard.md  index_preflight.md  index_security.md  index_vllm.md  vllm_abi_fix.md
docs/architecture/: docker_arm_strategy.md  zombie_prevention.md
docs/dashboard/: explorer_premium.md
docs/preflight/: scanner_logic.md
docs/security/: risk_analysis.md
docs/tasks/: client_script.md  concurrency_management.md  deploy_local_cluster.md  dvc_auth.md  jit_gc.md  setup_orchestrator.md
docs/vllm/: abi_fix.md
scripts/: cluster-run.sh  cluster_run.py  get_worker_details.py  install_vllm_source.sh  self_update_deferred.sh  tmate_log_filter.py  update_cluster_constraints.sh
src/cluster/: __init__.py  cluster_run.py  setup_runner.sh  start_listener.sh  uninstall_runner.sh
src/cluster_ci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+2 more)
(+28 files in other folders)
