[project]
name = "cluster-ci"
version = "0.1.0"
description = "GitOps continuous integration for DVC research pipelines"
authors = [
    { name = "UNIL-DESI" }
]
requires-python = ">=3.8"
dependencies = [
    "flask",
    "psutil",
    "requests",
    "authlib",
    "python-dotenv",
    "torch"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
