[project]
name = "cluster-ci"
version = "0.1.0"
description = "GitOps continuous integration for DVC research pipelines"
authors = [
    { name = "UNIL-DESI" }
]
requires-python = ">=3.10"
dependencies = [
    "flask",
    "psutil",
    "requests",
    "authlib",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
cluster-run = "cluster.cluster_run:main"

